--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <label class="form__label" for="form-auth__login">Логин</label>
     <input class="form__input" type="text" id="form-auth__login" name="form-auth__login" title="Введите логин" required>
     <label class="form__label" for="form-auth__password">Пароль</label>
-    <input class="form__input" pattern="[0-9]{5,}[^0-9]{2,}" type="password" id="form-auth__password" name="form-auth__password" title="Введите пароль" required>
+    <input class="form__input form__input--password" type="password" id="form-auth__password" name="form-auth__password" title="Введите пароль" required>
     <button type="submit" class="form__button">Войти</button>
   </form>
   <form class="form" action="#" id="form-reg" name="form-reg">
